--- a/design.css
+++ b/design.css
@@ -9,6 +9,11 @@ legend, form, input, h1, h3, h4 {
     align-content: center;
 }
 
+legend {
+    margin-bottom: 1em;
+    font-size: 3em;
+}
+
 input, select {
     padding: 0.5em;
     margin: 1em;
@@ -27,6 +32,20 @@ input, select {
     flex-direction: column-reverse;
     justify-content: center;
     align-content: center;
+}
+
+.result {
+    justify-content: center;
+    align-content: center;
+    padding: 0.25em;
+    margin: 0.5em;
+}
+
+.result label {
+    justify-content: center;
+    align-content: center;
+    padding: 0.25em;
+    margin: 0.25em;
 }
 
 .userInputs {
