--- a/design.css
+++ b/design.css
@@ -34,18 +34,20 @@ input, select {
     align-content: center;
 }
 
-.result {
+.result, .displayedData {
     justify-content: center;
     align-content: center;
     padding: 0.25em;
     margin: 0.5em;
 }
 
-.result label {
-    justify-content: center;
-    align-content: center;
+.result label, #mapHeading {
     padding: 0.25em;
     margin: 0.25em;
+}
+
+section.result {
+    margin: 3.5em 0.2em;
 }
 
 .userInputs {
@@ -55,4 +57,8 @@ input, select {
 ol {
     flex-wrap: wrap;
     max-width: 100%;
+}
+
+#noData {
+    color: red;
 }
